--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
+  <servlet>
+    <description></description>
+    <display-name>ListaEmpresasServlet</display-name>
+    <servlet-name>ListaEmpresasServlet</servlet-name>
+    <servlet-class>br.com.curso.gerenciador.servlet.ListaEmpresasServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ListaEmpresasServlet</servlet-name>
+    <url-pattern>/listaEmpresas</url-pattern>
+  </servlet-mapping>
   <display-name>gerenciador</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -10,11 +20,17 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-    <description></description>
-    <display-name>NovaEmpresaServlet</display-name>
+    <servlet-name>OiMundoServlet</servlet-name>
+    <servlet-class>br.com.curso.gerenciador.servlet.OiMundoServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>NovaEmpresaServlet</servlet-name>
     <servlet-class>br.com.curso.gerenciador.servlet.NovaEmpresaServlet</servlet-class>
   </servlet>
+  <servlet-mapping>
+    <servlet-name>OiMundoServlet</servlet-name>
+    <url-pattern>/oimundo</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>NovaEmpresaServlet</servlet-name>
     <url-pattern>/novaEmpresa</url-pattern>
