--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-<display>gerenciador</display>
+<display-name>gerenciador</display-name>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file>
+		<welcome-file>bem-vindo.html</welcome-file>
 	</welcome-file-list>
-
+	
+	<servlet>
+		<servlet-name>OiMundoServlet</servlet-name>
+		<servlet-class>br.com.curso.gerenciador.servlet.OiMundoServlet</servlet-class>
+	</servlet>	
+	<servlet-mapping>
+		<servlet-name>OiMundoServlet</servlet-name>
+		<url-pattern>/ola</url-pattern>
+	</servlet-mapping>
 
 </web-app>
