--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,10 @@
 	<welcome-file-list>
 		<welcome-file>bem-vindo.html</welcome-file>
 	</welcome-file-list>
-	
+	<session-config>
+    <!-- 10 min -->
+    <session-timeout>10</session-timeout>
+</session-config> 
 	<servlet>
 		<servlet-name>OiMundoServlet</servlet-name>
 		<servlet-class>br.com.curso.gerenciador.servlet.OiMundoServlet</servlet-class>
