--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app id="WebApp_ID" version="2.4"
+	xmlns="http://java.sun.com/xml/ns/j2ee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-<display-name>gerenciador</display-name>
+	<display-name>gerenciador</display-name>
 	<welcome-file-list>
 		<welcome-file>bem-vindo.html</welcome-file>
 	</welcome-file-list>
 	<session-config>
-    <!-- 10 min -->
-    <session-timeout>10</session-timeout>
-</session-config> 
+		<!-- 10 min -->
+		<session-timeout>10</session-timeout>
+	</session-config>
 	<servlet>
 		<servlet-name>OiMundoServlet</servlet-name>
 		<servlet-class>br.com.curso.gerenciador.servlet.OiMundoServlet</servlet-class>
-	</servlet>	
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>OiMundoServlet</servlet-name>
 		<url-pattern>/ola</url-pattern>
 	</servlet-mapping>
+
+	<filter>
+		<filter-name>MF</filter-name>
+		<filter-class>br.com.curso.gerenciador.filter.MonitoramentoFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>MF</filter-name>
+		<url-pattern>/entrada</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>AF</filter-name>
+		<filter-class>br.com.curso.gerenciador.filter.AutorizacaoFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>AF</filter-name>
+		<url-pattern>/entrada</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>CF</filter-name>
+		<filter-class>br.com.curso.gerenciador.filter.ControladorFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>CF</filter-name>
+		<url-pattern>/entrada</url-pattern>
+	</filter-mapping>
 
 </web-app>
